--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,7 +8,7 @@
     height: 7vh;
     padding-bottom: 7vh;
     background-color: $color-light;
-    margin-top: 5vh;
+    margin-top: 7rem;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -25,8 +25,8 @@
   vertical-align: center;
   float: left;
   transition: all .4s;
-  margin-right: 4vw;
-  margin-left: 4vw;
+  margin-right: 3.5vw;
+  margin-left: 3.5vw;
 
   &:hover{
     transform: scale(1.25);
