--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -154,6 +154,7 @@
 }
 
 .news{
+  margin-top: 7rem;
   grid-column-gap: 2rem;
   grid-template-columns: 27rem 27rem 27rem;
   grid-template-rows: 25% 100px auto;
